{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 63,
  "lineage": "76474310-c0c5-6cc2-93f9-e99bfd81a53f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:511190622237:listener/app/django-alb/3d2e86b59972609b/c8d6e022abab3410",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:511190622237:targetgroup/tg-django/4d1845fb3de0a675",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:511190622237:listener/app/django-alb/3d2e86b59972609b/c8d6e022abab3410",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:511190622237:loadbalancer/app/django-alb/3d2e86b59972609b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb_target_group.django",
            "module.alb.aws_lb.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_sg_for_alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "django",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:511190622237:targetgroup/tg-django/4d1845fb3de0a675",
            "arn_suffix": "targetgroup/tg-django/4d1845fb3de0a675",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:511190622237:targetgroup/tg-django/4d1845fb3de0a675",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:511190622237:loadbalancer/app/django-alb/3d2e86b59972609b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-django",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:511190622237:loadbalancer/app/django-alb/3d2e86b59972609b",
            "arn_suffix": "app/django-alb/3d2e86b59972609b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "django-alb-1661239488.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:511190622237:loadbalancer/app/django-alb/3d2e86b59972609b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "django-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-01c666c2211b7c8c7",
              "sg-0e08c3fedda6c2ff3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a00713711f5d811"
              },
              {
                "subnet_id": "subnet-04236955d0c2d8106"
              }
            ],
            "subnets": [
              "subnet-01a00713711f5d811",
              "subnet-04236955d0c2d8106"
            ],
            "tags": {
              "Environment": "Development",
              "Project": "Django",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Django",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0703be6e88c020728",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:511190622237:loadbalancer/app/django-alb/3d2e86b59972609b"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_sg_for_alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group/sg-01c666c2211b7c8c7",
            "description": "Security group for django-alb application load balancer",
            "egress": [],
            "id": "sg-01c666c2211b7c8c7",
            "ingress": [],
            "name": "django-alb-20250717170737616000000001",
            "name_prefix": "django-alb-",
            "owner_id": "511190622237",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Project": "Django",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Django",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group/sg-04a93c418aba6f010",
            "description": "Allow PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a93c418aba6f010",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "511190622237",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.db_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group-rule/sgr-0aec6be671e479352",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0aec6be671e479352",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04a93c418aba6f010",
            "security_group_rule_id": "sgr-0aec6be671e479352",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.db_sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.db_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "5432",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group-rule/sgr-0fa5ca9916a4a74f6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0fa5ca9916a4a74f6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04a93c418aba6f010",
            "security_group_rule_id": "sgr-0fa5ca9916a4a74f6",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.db_sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group/sg-0ccf6fca41c818342",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccf6fca41c818342",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-sg",
            "name_prefix": "",
            "owner_id": "511190622237",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg"
            },
            "tags_all": {
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group-rule/sgr-0bf08535ddd08e2b7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bf08535ddd08e2b7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0ccf6fca41c818342",
            "security_group_rule_id": "sgr-0bf08535ddd08e2b7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ssh_sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group-rule/sgr-0517ef1f3f93aad23",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0517ef1f3f93aad23",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0ccf6fca41c818342",
            "security_group_rule_id": "sgr-0517ef1f3f93aad23",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ssh_sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:network-acl/acl-067aa6822ff3de7a2",
            "default_network_acl_id": "acl-067aa6822ff3de7a2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-067aa6822ff3de7a2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "511190622237",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-00318010c8c790599",
              "subnet-01a00713711f5d811",
              "subnet-03bc2009238ca314d",
              "subnet-04236955d0c2d8106",
              "subnet-064856538a5035968",
              "subnet-09a5706f667026101"
            ],
            "tags": {
              "Name": "blog-default"
            },
            "tags_all": {
              "Name": "blog-default"
            },
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:route-table/rtb-0cc7766d50e04ca07",
            "default_route_table_id": "rtb-0cc7766d50e04ca07",
            "id": "rtb-0cc7766d50e04ca07",
            "owner_id": "511190622237",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "blog-default"
            },
            "tags_all": {
              "Name": "blog-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group/sg-05e488fa07b4b551c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05e488fa07b4b551c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "511190622237",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blog-default"
            },
            "tags_all": {
              "Name": "blog-default"
            },
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:internet-gateway/igw-0681a2c5e5e8565fd",
            "id": "igw-0681a2c5e5e8565fd",
            "owner_id": "511190622237",
            "region": "ap-south-1",
            "tags": {
              "Name": "blog"
            },
            "tags_all": {
              "Name": "blog"
            },
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0681a2c5e5e8565fd",
            "id": "r-rtb-0357ff05428c3345f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0357ff05428c3345f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0681a2c5e5e8565fd",
            "id": "r-rtb-0a1cf6f71e55c3cfe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a1cf6f71e55c3cfe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:route-table/rtb-0357ff05428c3345f",
            "id": "rtb-0357ff05428c3345f",
            "owner_id": "511190622237",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0681a2c5e5e8565fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blog-db"
            },
            "tags_all": {
              "Name": "blog-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:route-table/rtb-0918be9c38e198769",
            "id": "rtb-0918be9c38e198769",
            "owner_id": "511190622237",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "blog-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "blog-private-ap-south-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:route-table/rtb-0c42786c73591dd17",
            "id": "rtb-0c42786c73591dd17",
            "owner_id": "511190622237",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "blog-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "blog-private-ap-south-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:route-table/rtb-0a1cf6f71e55c3cfe",
            "id": "rtb-0a1cf6f71e55c3cfe",
            "owner_id": "511190622237",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0681a2c5e5e8565fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blog-public"
            },
            "tags_all": {
              "Name": "blog-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0575fd7d21e1c6b0b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0357ff05428c3345f",
            "subnet_id": "subnet-03bc2009238ca314d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0082a7603be93f290",
            "region": "ap-south-1",
            "route_table_id": "rtb-0357ff05428c3345f",
            "subnet_id": "subnet-00318010c8c790599"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf162d5f4b0bac67",
            "region": "ap-south-1",
            "route_table_id": "rtb-0918be9c38e198769",
            "subnet_id": "subnet-064856538a5035968"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cb410110e4c7f14",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c42786c73591dd17",
            "subnet_id": "subnet-09a5706f667026101"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0667c5049fcd3ba",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a1cf6f71e55c3cfe",
            "subnet_id": "subnet-01a00713711f5d811"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d743abf6c973a108",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a1cf6f71e55c3cfe",
            "subnet_id": "subnet-04236955d0c2d8106"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:subnet/subnet-03bc2009238ca314d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bc2009238ca314d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511190622237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "blog-db-ap-south-1a",
              "name": "db-subnet-blog"
            },
            "tags_all": {
              "Name": "blog-db-ap-south-1a",
              "name": "db-subnet-blog"
            },
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:subnet/subnet-00318010c8c790599",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.17.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00318010c8c790599",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511190622237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "blog-db-ap-south-1b",
              "name": "db-subnet-blog"
            },
            "tags_all": {
              "Name": "blog-db-ap-south-1b",
              "name": "db-subnet-blog"
            },
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:subnet/subnet-064856538a5035968",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064856538a5035968",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511190622237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "blog-private-ap-south-1a",
              "name": "private-subnet-blog"
            },
            "tags_all": {
              "Name": "blog-private-ap-south-1a",
              "name": "private-subnet-blog"
            },
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:subnet/subnet-09a5706f667026101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a5706f667026101",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511190622237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "blog-private-ap-south-1b",
              "name": "private-subnet-blog"
            },
            "tags_all": {
              "Name": "blog-private-ap-south-1b",
              "name": "private-subnet-blog"
            },
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:subnet/subnet-01a00713711f5d811",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a00713711f5d811",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511190622237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "blog-public-ap-south-1a",
              "name": "public-subnet-blog"
            },
            "tags_all": {
              "Name": "blog-public-ap-south-1a",
              "name": "public-subnet-blog"
            },
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:subnet/subnet-04236955d0c2d8106",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04236955d0c2d8106",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511190622237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "blog-public-ap-south-1b",
              "name": "public-subnet-blog"
            },
            "tags_all": {
              "Name": "blog-public-ap-south-1b",
              "name": "public-subnet-blog"
            },
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:vpc/vpc-0703be6e88c020728",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-067aa6822ff3de7a2",
            "default_route_table_id": "rtb-0cc7766d50e04ca07",
            "default_security_group_id": "sg-05e488fa07b4b551c",
            "dhcp_options_id": "dopt-099d59fb02c5fbbf0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0703be6e88c020728",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc7766d50e04ca07",
            "owner_id": "511190622237",
            "region": "ap-south-1",
            "tags": {
              "Name": "blog",
              "name": "django-blog"
            },
            "tags_all": {
              "Name": "blog",
              "name": "django-blog"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_sg_for_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group/sg-0e08c3fedda6c2ff3",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e08c3fedda6c2ff3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg_for_alb",
            "name_prefix": "",
            "owner_id": "511190622237",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg_for_alb"
            },
            "tags_all": {
              "Name": "web-sg_for_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0703be6e88c020728"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_sg_for_alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group-rule/sgr-0636714d2db64205e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0636714d2db64205e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e08c3fedda6c2ff3",
            "security_group_rule_id": "sgr-0636714d2db64205e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web_sg_for_alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_sg_for_alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group-rule/sgr-093a92c78f8671d5d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-093a92c78f8671d5d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e08c3fedda6c2ff3",
            "security_group_rule_id": "sgr-093a92c78f8671d5d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web_sg_for_alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511190622237:security-group-rule/sgr-0ce85a382d03dab78",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ce85a382d03dab78",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e08c3fedda6c2ff3",
            "security_group_rule_id": "sgr-0ce85a382d03dab78",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web_sg_for_alb.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}